# bundler

./: .gitignore  LICENSE.rst  README.md  pyproject.toml  requirements.txt  setup.py
src/static_bundler/: bundle.py
tests/: test.py
